承包人联系单选择控件修改

--- a/src/main/webapp/resources/css/component.css
+++ b/src/main/webapp/resources/css/component.css
@@ -12,6 +12,11 @@
 .dialog-table{
 	width: 100%;
 }
+
+.dialog-table .chkreq{
+	float: right;
+	margin-right: 10px;
+}
 	
 .dialog-query input {
 	margin-left: 5px;
@@ -19,5 +24,5 @@
 	
 .dialog-more{
 	text-align: right;
-	margin-right: 20px;
+	margin-right: 12px;
 }
